--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <div class="about-text padd-15">
                     <h3><span>Hello There!</span></h3>
                     <p>My name is Shubham Hajare. I am currently pursuing my Master's in Computer Science from Sir Pershurambhau College, Pune. I am from Pune, Maharashtra. Currently,
-                      I am working at Bravitek Solutions Pvt. Ltd. as a Software Engineer intern. I’m Actually working on CPP (QT Framework). I'm also interested in learning more about Web Development. I am always experimenting, always learning, and never bored.</p>
+                      I am working at Bravitek Solutions Pvt. Ltd. as a Software Engineer.I'm working on design, development, implementation and testing of "Steam Propulsion Plant Simulator" in C++ language and QT framework on Linux platform. I'm also interested in learning more about Web Development. I am always experimenting, always learning, and never bored.</p>
                   </div>
                 </div>
                 <div class="row">
@@ -284,7 +284,7 @@
                               Jan, 2021 - Present
                             </h6>
                             <h4 class="timeline-title">Bravitek Solutions Pvt. Ltd.</h4>
-                            <p class="timeline-text">Working with C++ Language & QT Framework.
+                            <p class="timeline-text">I'm working on design, development, implementation and testing of "Steam Propulsion Plant Simulator" in C++ language and QT framework on Linux platform.
                               <br>
                               Project of Simulation of Steam Propulsion Plant Operations.
                             </p>
