--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="row">
                       <div class="buttons padd-15">
-                        <a href="https://drive.google.com/file/d/1QwlCw7yCZuZah0_PokjS_htVzdikvG1Z/view?usp=sharing" download target="_blank"class="btn">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1JIikFqDsmkCQ18kgf3hguCUe0-mpZIfG/view" download target="_blank"class="btn">Download CV</a>
                       </div>
                     </div>
                   </div>
