--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="row">
                   <div class="about-text padd-15">
                     <h3><span>Hello There!</span></h3>
-                    <p>My name is Shubham Hajare. I am currently pursuing my Master's in Computer Science from Sir Pershurambhau College, Pune. I am from Pune, Maharashtra. Currently,
+                    <p>My name is Shubham Hajare. I've done my Master's in Computer Science from Sir Pershurambhau College, Pune. Currently,
                       I am working at Bravitek Solutions Pvt. Ltd. as a Software Engineer.I'm working on C++ language and QT framework on Linux platform. I'm also interested in learning more about Web Development. I am always experimenting, always learning, and never bored.</p>
                   </div>
                 </div>
