--- a/index.html
+++ b/index.html
@@ -315,8 +315,13 @@
                     <img src="https://i.ibb.co/TPHDrV5/Vidyawani.jpg" alt="">
                   </div>
                   <div class="project-info">
-                    <h4 class="project-title">Vidyawani Online Radio</h4>
-                    <p class="project-description">It is Online Radio for pune university which plays radio as well as display University program schedule and University Events. User also uses this app as an social app because our team also included Posts feature in it.
+                    <h4 class="project-title">Steam Propulsion Plant Simulator</h4>
+                    <p class="project-description">
+                      • Worked on CPP Language with QT Framework and MySQL Database on Linux Platform. <br>
+                      • This project is for INS Shivaji (Indian Navy Station Lonavala), In which we have to create virtual simulator of Vikram-Aditya submarine. <br>
+                      • This project contains 1 Server & 5 Clients (Boiler pome console, Throttle ERA console, COW console, EOW console & Schematics). And for this Client-Server communication TCP-IP Protocol with Server-Socket programming is used. <br>
+                      • For Hardware Interaction with PLC boards MODBUS library is used, because there are some hardware components like Steering wheel, No. of Indicators and so on. <br>
+                      • We also worked on 10 System diagrams which contains multiple components like Pipes, Burners, T-Junctions and so on. And after each simulation cycle, I’ve to store current status of all components that’s why MySQL Database is used. 
                     </p>
                     <div class="buttons">
                       <a href="https://github.com/Shubham411/Vidyawani-V2/" class="btn">View Project</a>
