--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               <div class="project-item padd-15">
                 <div class="project-item-inner shadow-dark">
                   <div class="project-img">
-                    <img src="https://i.ibb.co/TPHDrV5/Vidyawani.jpg" alt="">
+                   <a href="https://ibb.co/HHSLGgZ"><img src="https://i.ibb.co/CHcpV0L/processed-95bc0667-3fcf-4ef2-936a-6b9927604a39-J2-En-CNwd.jpg" alt="processed-95bc0667-3fcf-4ef2-936a-6b9927604a39-J2-En-CNwd" border="0"></a>
                   </div>
                   <div class="project-info">
                     <h4 class="project-title">Steam Propulsion Plant Simulator</h4>
